[gd_scene load_steps=13 format=2]

[ext_resource path="res://ROOT.gd" type="Script" id=1]
[ext_resource path="res://fonts/JetBrainsMono-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/JetBrainsMono-Regular16.tres" type="DynamicFont" id=3]
[ext_resource path="res://Async/AsyncButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ListElements/Container.tscn" type="PackedScene" id=5]
[ext_resource path="res://ListElements/Spline.tscn" type="PackedScene" id=6]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=7]
[ext_resource path="res://ListElements/Image.tscn" type="PackedScene" id=8]
[ext_resource path="res://Async/AsyncShell.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.188235 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.290196 )
border_width_left = 5
border_color = Color( 0, 0, 0, 0.290196 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.203922 )

[node name="ROOT" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dashboard" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="DockerUI" type="Label" parent="TabContainer/Dashboard"]
margin_left = 11.0
margin_right = 137.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "DockerUI 1.0.0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DockerVersion" type="Label" parent="TabContainer/Dashboard/DockerUI"]
margin_top = 16.6677
margin_right = 126.0
margin_bottom = 36.6677
custom_fonts/font = ExtResource( 2 )
text = "Docker Version: ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Refresh" parent="TabContainer/Dashboard" instance=ExtResource( 4 )]
margin_left = 329.631
margin_top = 6.56805
margin_right = 428.631
margin_bottom = 35.5681
text = "Refresh"

[node name="old" type="HBoxContainer" parent="TabContainer/Dashboard"]
visible = false
anchor_right = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = 376.0
custom_constants/separation = 10
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="paths" type="Control" parent="TabContainer/Dashboard/old"]
margin_right = 329.0
margin_bottom = 376.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Dashboard/old/paths"]
anchor_right = 1.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Source build paths"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Dashboard/old/paths"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dashboard/old/paths/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button" parent="TabContainer/Dashboard/old/paths/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 329.0

[node name="Button2" parent="TabContainer/Dashboard/old/paths/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 25.0
margin_right = 329.0
margin_bottom = 48.0

[node name="Button3" parent="TabContainer/Dashboard/old/paths/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 50.0
margin_right = 329.0
margin_bottom = 73.0

[node name="images" type="Control" parent="TabContainer/Dashboard/old"]
margin_left = 339.0
margin_right = 668.0
margin_bottom = 376.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Dashboard/old/images"]
anchor_right = 1.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Docker images"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Dashboard/old/images"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dashboard/old/images/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Button4" parent="TabContainer/Dashboard/old/images/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 329.0

[node name="Button5" parent="TabContainer/Dashboard/old/images/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 25.0
margin_right = 329.0
margin_bottom = 48.0

[node name="containers" type="Control" parent="TabContainer/Dashboard/old"]
margin_left = 678.0
margin_right = 1008.0
margin_bottom = 376.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Dashboard/old/containers"]
anchor_right = 1.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Docker containers"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Dashboard/old/containers"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dashboard/old/containers/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Button6" parent="TabContainer/Dashboard/old/containers/Panel/VBoxContainer" instance=ExtResource( 6 )]

[node name="Button7" parent="TabContainer/Dashboard/old/containers/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 25.0
margin_bottom = 48.0

[node name="Button8" parent="TabContainer/Dashboard/old/containers/Panel/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 50.0
margin_bottom = 73.0

[node name="simpler" type="HBoxContainer" parent="TabContainer/Dashboard"]
anchor_right = 1.0
margin_left = 462.0
margin_right = -4.0
margin_bottom = 376.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="images" type="Control" parent="TabContainer/Dashboard/simpler"]
margin_right = 270.0
margin_bottom = 376.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Dashboard/simpler/images"]
anchor_right = 1.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Docker images"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Dashboard/simpler/images"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Unselect" type="Button" parent="TabContainer/Dashboard/simpler/images/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dashboard/simpler/images/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true
}

[node name="image" parent="TabContainer/Dashboard/simpler/images/Panel/VBoxContainer" instance=ExtResource( 8 )]
margin_right = 270.0

[node name="image2" parent="TabContainer/Dashboard/simpler/images/Panel/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 25.0
margin_right = 270.0
margin_bottom = 48.0
focus_mode = 2

[node name="image3" parent="TabContainer/Dashboard/simpler/images/Panel/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 50.0
margin_right = 270.0
margin_bottom = 73.0
focus_mode = 2

[node name="image4" parent="TabContainer/Dashboard/simpler/images/Panel/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 75.0
margin_right = 270.0
margin_bottom = 98.0
focus_mode = 2

[node name="containers" type="Control" parent="TabContainer/Dashboard/simpler"]
margin_left = 280.0
margin_right = 550.0
margin_bottom = 376.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Dashboard/simpler/containers"]
anchor_right = 1.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Docker containers"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TabContainer/Dashboard/simpler/containers"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Unselect" type="Button" parent="TabContainer/Dashboard/simpler/containers/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Dashboard/simpler/containers/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Container" parent="TabContainer/Dashboard/simpler/containers/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_right = 270.0

[node name="Container2" parent="TabContainer/Dashboard/simpler/containers/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 25.0
margin_right = 270.0
margin_bottom = 48.0
focus_mode = 2

[node name="Container3" parent="TabContainer/Dashboard/simpler/containers/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 50.0
margin_right = 270.0
margin_bottom = 73.0
focus_mode = 2

[node name="PATH" type="Label" parent="TabContainer/Dashboard"]
visible = false
margin_left = 4.0
margin_top = 256.329
margin_right = 381.0
margin_bottom = 284.329
rect_min_size = Vector2( 0, 28 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Test/Path/etc"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectPath" type="Button" parent="TabContainer/Dashboard/PATH"]
visible = false
margin_top = 38.0
margin_right = 162.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 3 )
text = "Select path"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RebuildImage" parent="TabContainer/Dashboard/PATH" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 68.6254
margin_bottom = -2.0

[node name="OUTPUT" type="RichTextLabel" parent="TabContainer/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 381.0
margin_right = -4.0
margin_bottom = -30.0
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "dasd"
text = "dasd"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearConsole" type="Button" parent="TabContainer/Dashboard/OUTPUT"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.0
margin_bottom = 20.0
text = "clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CMD" type="LineEdit" parent="TabContainer/Dashboard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -31.0
margin_right = -58.0
margin_bottom = -3.0
rect_min_size = Vector2( 0, 28 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsyncShellBtn" parent="TabContainer/Dashboard/CMD" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -0.937286
margin_top = -13.0
margin_right = 53.0627
margin_bottom = 13.0
text = "Send"

[node name="CanvasLayer" type="Control" parent="TabContainer/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Raw" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="IMAGES" type="RichTextLabel" parent="TabContainer/Raw"]
anchor_right = 1.0
margin_bottom = 151.0
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CONTAINERS" type="RichTextLabel" parent="TabContainer/Raw"]
anchor_right = 1.0
margin_top = 159.0
margin_bottom = 311.0
rect_clip_content = false
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -236.0
margin_right = 206.0
margin_bottom = 257.0
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="action_pressed" from="TabContainer/Dashboard/Refresh" to="." method="_on_Refresh_action_pressed"]
[connection signal="pressed" from="TabContainer/Dashboard/simpler/images/Panel/Unselect" to="." method="_on_Unselect_pressed"]
[connection signal="pressed" from="TabContainer/Dashboard/simpler/containers/Panel/Unselect" to="." method="_on_Unselect_pressed"]
[connection signal="gui_input" from="TabContainer/Dashboard/PATH" to="." method="_on_PATH_gui_input"]
[connection signal="pressed" from="TabContainer/Dashboard/PATH/SelectPath" to="." method="_on_SelectPath_pressed"]
[connection signal="action_pressed" from="TabContainer/Dashboard/PATH/RebuildImage" to="." method="_on_RebuildImage_action_pressed"]
[connection signal="pressed" from="TabContainer/Dashboard/OUTPUT/ClearConsole" to="." method="_on_ClearConsole_pressed"]
[connection signal="text_changed" from="TabContainer/Dashboard/CMD" to="." method="_on_CMD_text_changed"]
[connection signal="text_entered" from="TabContainer/Dashboard/CMD" to="." method="_on_CMD_text_entered"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
